--- a/Index.html
+++ b/Index.html
@@ -462,7 +462,7 @@
             <div></div>
         </label>
         <div class="nav-item">
-            <a href="Home.html">Home</a>
+            <a href="Index.html">Home</a>
             <a href="Gallery.html">My Gallery</a>
             <a href="MyMemories.html">My Memories</a>
             <a href="Gifts.html">Gifts</a>
